--- a/app/globals.css
+++ b/app/globals.css
@@ -61,3 +61,8 @@ body {
   animation: pulseColor 5s cubic-bezier(0.25, 0.46, 0.45, 0.94) infinite;
 }
 
+.no-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
